CSS tidying; 1/4 homepage tile will now hyphenate title if it's too long such as "volunteers" on a landscape tablet; carousel buttons now animate their hover effect; kludged a way to customise the 2nd link in the first homepage carousel slide; removed colour classes from carousel buttons; events sidebar no longer links the heading since it has as button at the end, which now includes the event category.

--- a/css/custom.css
+++ b/css/custom.css
@@ -146,7 +146,7 @@ a:active,
 }
 
 /* Buttons on green sidebar */
-.sidebar .btn:hover,
+.sidebar > div:not([class]) .btn:hover,
 .sidebar .btn:focus,
 .sidebar .btn:active {
     color: var(--tri-white);
@@ -287,7 +287,7 @@ th {
 /* Home mission statement */
 .disclaimer {
     margin: 20px auto;
-    max-width: 32em;
+    max-width: 60em;
     font: var(--font-h3);
     text-align: center;
 }
@@ -298,6 +298,7 @@ th {
 /* Home tile title */
 .tyle h2 {
     font: var(--font-h4);
+    hyphens: auto; /* Volunteering in Homepage 1/4 tile */
 }
 /* Home tile description */
 /* Inherits body text */
@@ -613,23 +614,19 @@ main h1 {
 
 /* Carousel */
 
-.carousel-caption {
-    padding: 30px 40px 30px 40px; /* double gutters */
-    left: 8.333%; /* 1/12 columns */
-    width: 58.337%; /* 8/12 columns */
-    width: calc(58.334% - 7px ); /* accurately 8/12 columns */
-    text-align: left;
-}
-
 .carousel-item {
     max-height: 540px; /* half height of Full HD 1080p */
 }
 
 /* Carousel caption */
 
-.card {
-    border: 0;
-    border-radius: 0;
+.carousel-caption {
+    padding: 30px 40px 30px 40px; /* double gutters */
+    left: 8.333%; /* 1/12 columns */
+    bottom: 40px; /* double gutter */
+    width: 58.337%; /* 8/12 columns */
+    width: calc(58.334% - 7px ); /* accurately 8/12 columns */
+    text-align: left;
 }
 
 .card-body {
@@ -656,6 +653,14 @@ main h1 {
 .carousel-control-prev,
 .carousel-control-next {
     width: 4.167%; /* half of a 12-column grid slot */
+    min-width: 4em;
+    opacity: 1 !important; /* theme.css */
+}
+
+.carousel-control-prev span,
+.carousel-control-next span {
+    opacity: 0.8;
+    transition: color 0.2s ease-in, opacity 0.2s ease-in;
 }
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
@@ -672,20 +677,13 @@ main h1 {
 .carousel-control-next:hover span,
 .carousel-control-next:focus span {
     color: var(--tri-green);
-}
-.carousel-control-prev,
-.carousel-control-prev:hover,
-.carousel-control-prev:focus,
-.carousel-control-next,
-.carousel-control-next:hover,
-.carousel-control-next:focus {
     opacity: 1;
 }
 .carousel-control-prev-icon:after {
-    content: "⟨"; /* MY CHARACTER CODEPOINTS ARE OVER 9000 */
+    content: "⟨"; /* MY CHARACTER CODEPOINTS ARE OVER 9000! */
 }
 .carousel-control-next-icon:after {
-    content: "⟩"; /* MY CHARACTER CODEPOINTS ARE OVER 9000 */
+    content: "⟩"; /* MY CHARACTER CODEPOINTS ARE OVER 9000! */
 }
 
 /* Carousel slide indicator pagination thing */
@@ -874,7 +872,6 @@ Pagination menu
 }
 
 .tyle-rectangle .caption {
-    width: calc(100% - 287px);
     width: calc(50% + 10px); /* half the panel and remaining half gutter */
     margin-top: 0;
     margin-left: auto; /* push caption to right half */
